--- a/src/css/photo.css
+++ b/src/css/photo.css
@@ -9,12 +9,8 @@
     padding-top: 3rem;
 }
 
-
-/* #photo .close{
-        background-color: whitesmoke;
-    } */
-
 #photo-cont {
+    min-height: 72vh;
     width: 95vw;
     display: flex;
     align-items: center;
@@ -30,18 +26,13 @@
 }
 
 #arrows {
-    width: 90%;
-    padding: 0 5%;
+    width: 95%;
+    /* padding: 0 5%; */
     color: whitesmoke;
     display: flex;
     justify-content: space-between;
     position: fixed;
-    top: 50%;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
+    bottom: 4rem;
 }
 
 #right_arrow img {
@@ -55,3 +46,20 @@
     filter: invert(100%);
     background-color: rgba(255, 255, 255, 0.322);
 }
+
+#left_arrow,
+#right_arrow {
+    bottom: auto !important;
+}
+
+
+/* @media (min-width: 576px) {
+    #arrows {
+        top: 50%;
+        transform: translateY(50%) !important;
+        -webkit-transform: translateY(50%) !important;
+        -moz-transform: translateY(50%) !important;
+        -ms-transform: translateY(50%) !important;
+        -o-transform: translateY(50%) !important;
+    }
+} */
