--- a/src/views/contribute-images.html
+++ b/src/views/contribute-images.html
@@ -9,14 +9,20 @@
     <title>PHOTOWHERE</title>
     <link rel="icon" href="./src/img/ma1.png">
 
-    <link rel="stylesheet" href="./src/css/common.css?v=5">
-    <link rel="stylesheet" href="./src/css/forms.css?v=5">
-    <link rel="stylesheet" href="./src/css/contribute.css?v=5">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js?v=5"></script>
 
+    <link rel="stylesheet" href="./src/css/common.css">
+    <link rel="stylesheet" href="./src/css/forms.css">
+    <link rel="stylesheet" href="./src/css/contribute.css">
+
+    <style>
+        main {
+            min-height: 80vh;
+        }
+    </style>
 
 </head>
 
@@ -27,86 +33,37 @@
     </nav>
 
     <div id="mobile">
-        <main style="padding: 2rem 0;">
+        <main>
             <div class="section_title">
-                <h2>Contribute</h2>
+                <h2>Contribute Images</h2>
             </div>
+
             <form>
-                <label style="text-align: center; font-size: 4rem !important; color: yellow;">W.I.P.</label>
-                <!-- <img src="" alt="" id="ola"> -->
-                <!-- <div id="photos_input">
-                    
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="0"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="1"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="2"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="3"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="4"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="5"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="6"> </div>
-                    </div>
-                    <div class="photo_input">
-                        <div> <img src="./src/img/plus.png" alt="" class="realimg" width="100%" data-id="7"> </div>
-                    </div>
-                </div>
-                <input type="file" id="default-file" hidden="hidden" /> -->
 
-                <!-- Button Markup -->
-                <!-- <div id="custom-btn" type="button" class="btn">
-                    <label>Subir foto</label>
-                </div>
-                <div class="preview_holder">
-                    <div id="preview">
-                        <img src="" id="preview_img" class="preview_img" />
-                        <span id="preview_text" class="preview_text">Image Preview</span>
-                    </div>
-                </div> -->
 
-                <!-- <label>Localización:</label>
-                <div id="map_div">
-                    <div id="cmap"></div>
-                </div>
-                <label id="error"></label>
 
-                <img src="./src/img/cancel.svg" id="close" class="hidden"> -->
 
-                <button type="button" id="send">ENVIAR</button>
+
+                <label class="error"></label>
+                <button type="button" id="send">ENVIAR IMAGEN</button>
             </form>
         </main>
+        <footer>
+            <a href="./">
+                <img src="./src/img/search.svg" alt="Home footer button">
+            </a>
+            <a href="./map">
+                <img src="./src/img/map.svg" alt="Map footer button">
+            </a>
+            <a href="./contribute">
+                <img src="./src/img/add.svg" alt="Contribute footer button">
+            </a>
+            <a href="./profile">
+                <img src="./src/img/user.svg" alt="Profile footer button">
+            </a>
+        </footer>
     </div>
 
-    <footer>
-        <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
-        </a>
-        <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
-        </a>
-        <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
-        </a>
-        <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
-        </a>
-    </footer>
-
-
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js?v=5" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
-    <!-- <script src="./src/js/contribute.js?v=5"></script> -->
-    <script src="./src/js/Geo.js?v=5"></script>
-    <script src="./src/js/get_loc_map.js?v=5"></script>
 
 </body>
 
