--- a/src/views/notlogged.html
+++ b/src/views/notlogged.html
@@ -46,17 +46,17 @@
     </main>
 
     <footer>
-        <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
+        <a href="./">
+            <img src="./src/img/search.svg" alt="Home footer button">
         </a>
-        <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
+        <a href="./map">
+            <img src="./src/img/map.svg" alt="Map footer button">
         </a>
-        <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
+        <a href="./contribute">
+            <img src="./src/img/add.svg" alt="Contribute footer button">
         </a>
-        <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
+        <a href="./profile">
+            <img src="./src/img/user.svg" alt="Profile footer button">
         </a>
     </footer>
 </body>
