--- a/src/views/profile.html
+++ b/src/views/profile.html
@@ -62,16 +62,20 @@
         <a href="./settings.html"><img src="./src/img/hamb.svg" alt="icono de hamburguesa" id="hamb"></a>
     </nav>
 
-    <div id="photo" style="display:none;">
-        <div class="close">
-            <img src="./src/img/cancel.svg" alt="cerrar ventana" id="close-photo">
+    <div id="photo-display-panel" style="display:none;">
+        <div id="close-photo-display-panel" class="close-panel">
+            <img src="./src/img/cancel.svg" alt="cerrar ventana">
         </div>
-        <div id="photo-cont">
-            <img src="" alt="previsualizar" id="img_pre">
+        <div id="photo-display-panel-container">
+            <img src="" alt="previsualizar" id="photo-display-panel-img">
         </div>
-        <div id="arrows">
-            <div id="left_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha izquierda"> </div>
-            <div id="right_arrow"> <img src="https://acolmenero.site/photowhere/src/img/arrow.svg" alt="flecha derecha"> </div>
+        <div id="photo-display-panel-arrows">
+            <div id="photo-display-panel-left-arrow" class="arrow">
+                <img src="./src/img/arrow.svg" alt="flecha izquierda">
+            </div>
+            <div id="photo-display-panel-right-arrow" class="arrow">
+                <img src="./src/img/arrow.svg" alt="flecha derecha">
+            </div>
         </div>
     </div>
 
@@ -123,17 +127,17 @@
 
 
     <footer>
-        <a class="nav__button" href="./index.html">
-            <img src="https://acolmenero.site/photowhere/src/img/search.svg" alt="Search footer button">
+        <a href="./">
+            <img src="./src/img/search.svg" alt="Home footer button">
         </a>
-        <a class="nav__button" href="./map.html">
-            <img src="https://acolmenero.site/photowhere/src/img/map.svg" alt="Map footer button">
+        <a href="./map">
+            <img src="./src/img/map.svg" alt="Map footer button">
         </a>
-        <a class="nav__button" href="./contribute.html">
-            <img src="https://acolmenero.site/photowhere/src/img/add.svg" alt="Contribute footer button">
+        <a href="./contribute">
+            <img src="./src/img/add.svg" alt="Contribute footer button">
         </a>
-        <a class="nav__button" href="./profile.html">
-            <img src="https://acolmenero.site/photowhere/src/img/user.svg" alt="Account footer button">
+        <a href="./profile">
+            <img src="./src/img/user.svg" alt="Profile footer button">
         </a>
     </footer>
 
