--- a/src/_css/common.css
+++ b/src/_css/common.css
@@ -1,8 +1,26 @@
+body,
+html,
+main {
+    background-color: rgb(36, 30, 30);
+}
+
 html,
 body {
-    background-color: rgb(36, 30, 30);
     margin: 0;
-    width: 100vw !important;
+}
+
+textarea {
+    resize: vertical;
+}
+
+h2,
+h3,
+p,
+.tag a,
+strong,
+label,
+button {
+    font-family: 'Montserrat', sans-serif;
 }
 
 ::-webkit-scrollbar {
@@ -39,35 +57,13 @@ h2 {
                                     supported by Chrome, Edge, Opera and Firefox */
 }
 
-#mobile {
-    background: #141212;
-}
-
-main {
-    padding-bottom: 4rem !important;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.error {
-    color: red;
-    font-size: .8rem !important;
-    margin: .5rem .4rem !important;
-    display: block;
-    text-align: right;
-}
-
-h2,
-h3,
-p,
-.tag a,
-strong,
-label,
-button {
-    font-family: 'Montserrat', sans-serif;
-    color: whitesmoke;
+nav {
+    position: sticky;
+    background-color: whitesmoke;
+    width: 100%;
+    height: 3rem;
+    z-index: 1000;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -77,74 +73,89 @@ h1 {
     text-align: 2rem;
 }
 
-nav {
-    position: sticky;
+#hamb {
+    width: 2rem;
+    height: 2rem;
+    padding: .5rem;
+    position: fixed;
     top: 0;
-    background-color: whitesmoke;
-    width: 100%;
-    height: 3rem;
-    z-index: 3002;
-    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
+    right: 0;
 }
 
+#hamb:hover {
+    background-color: rgb(235, 235, 235);
+}
 
-/* FOOTER  */
+main {
+    background-color: #1a1a1a;
+    width: 100%;
+    min-height: calc( 100vh - 6rem);
+    /* padding: 2rem 0; */
+}
+
+body {}
+
+#mobile {
+    overflow-y: scroll;
+    height: calc( 100vh - 6rem);
+    z-index: 999;
+}
+
+#close-location-panel,
+#close-photo-display-panel,
+.arrow {
+    cursor: pointer;
+}
+
+#locationPanel {}
 
 footer {
-    position: fixed;
-    bottom: 0;
     background-color: white;
     display: flex;
     width: 100%;
     height: 3rem;
-    z-index: 3002;
-    box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.212);
 }
 
 footer a {
     background-color: white;
+    z-index: 1000;
+}
+
+.nav__button {
     width: 25%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-footer img {
-    height: 1.5rem;
-}
-
-.location-photogrid {
-    cursor: pointer;
-}
-
 .close-panel {
-    cursor: pointer;
     padding: .5rem;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
-    height: 1.3rem;
+    height: 1.5rem;
     background: linear-gradient(145deg, #ffffff, #e6e6e6);
 }
 
 .close-panel img {
     display: block;
     width: 1.1rem;
-    padding: .1rem;
     margin-left: auto;
+    padding: .2rem;
+}
+
+.nav__button img {
+    height: 1.5rem;
+}
+
+.none {
+    text-align: center;
+    margin-top: 5rem;
+    color: rgb(167, 167, 167);
+    width: 100%;
 }
 
 @media (min-width: 576px) {
-    nav,
-    footer,
     #mobile {
         margin: 0 auto;
         width: 500px;
-    }
-    .close-panel {
-        padding: .5rem;
-        height: 2rem;
-    }
-    .close-panel img {
-        width: 1.4rem;
-        padding: .3rem;
     }
 }
